Fixes and enhancements for Restcomm load tests